crates/ignis_driver/tests/snapshots/e2e_err__err_compile_error.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
this should not compile
