crates/ignis_driver/tests/snapshots/e2e_err__err_conditional_drop_then_use.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Variable 'r' is dropped in one branch but not the other
Use of dropped value 'r'
