crates/ignis_driver/tests/snapshots/e2e_err__err_config_flag_non_string.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
@configFlag expects a string literal argument
