crates/ignis_driver/tests/snapshots/e2e_err__err_conflicting_inferred_types.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Type mismatch: expected 'i32', found 'bool'
