crates/ignis_driver/tests/snapshots/e2e_err__err_consuming_self_through_reference.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
cannot move out of borrowed value
