crates/ignis_driver/tests/snapshots/e2e_err__err_defer_non_void_expression.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
deferred expression must be of type 'void', found 'i32'
