crates/ignis_driver/tests/snapshots/e2e_err__err_deny_unused_mut.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
variable 'x' does not need to be mutable
