crates/ignis_driver/tests/snapshots/e2e_err__err_deny_unused_variable.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
unused variable 'x'
