crates/ignis_driver/tests/snapshots/e2e_err__err_double_drop.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Value 'r' has already been dropped
