crates/ignis_driver/tests/snapshots/e2e_err__err_drop_in_while_use_after.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Value 'r' has already been dropped
Use of dropped value 'r'
