crates/ignis_driver/tests/snapshots/e2e_err__err_enum_variant_payload_move_consumes_owner.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Use of moved value 'value'
  note: 'record Owned' implements Drop, which makes it non-Copy
  note: help: consider adding '@implements(Clone)' to 'record Owned' and implementing a 'clone' method
